package eapli.base.Enrollment.Repository;

import eapli.base.Enrollment.Domain.Enrollment;
import eapli.framework.domain.repositories.DomainRepository;

public interface EnrollmentRepository extends DomainRepository<Long, Enrollment> {
}
